<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>ca.bc.gov.ols</groupId>
	<artifactId>ols-geocoder</artifactId>
	<version>4.2.2-RELEASE</version>
	<packaging>pom</packaging>
	<name>OLS Geocoder</name>
	<url>https://bcgov.github.io/ols-geocoder/</url>
	<inceptionYear>2008</inceptionYear>

	<organization>
		<name>Province of British Columbia</name>
		<url>https://www.gov.bc.ca/</url>
	</organization>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:https://github.com/bcgov/ols-geocoder.git</connection>
		<developerConnection>scm:git:git@github.com:bcgov/ols-geocoder.git</developerConnection>
		<url>https://github.com/bcgov/ols-geocoder</url>
	</scm>

	<issueManagement>
		<system>github.com</system>
		<url>https://github.com/bcgov/ols-geocoder/issues</url>
	</issueManagement>

	<developers>
		<developer>
			<name>Chris Hodgson</name>
			<email>chodgson@refractions.net</email>
			<organization>Refractions Research Inc.</organization>
			<organizationUrl>http://www.refractions.net/</organizationUrl>
			<timezone>PST</timezone>
		</developer>
	</developers>

	<contributors>
		<contributor>
			<name>Michael Ross</name>
			<email>Michael.RA.Ross@gov.bc.ca</email>
			<organization>Province of British Columbia</organization>
			<organizationUrl>https://www.gov.bc.ca</organizationUrl>
			<timezone>PST</timezone>
		</contributor>
		<contributor>
			<name>Brian Kelsey</name>
			<email>Brian.Kelsey@gov.bc.ca</email>
			<organization>Province of British Columbia</organization>
			<organizationUrl>https://www.gov.bc.ca</organizationUrl>
			<timezone>PST</timezone>
		</contributor>
	</contributors>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<gitHubUrl />
		<siteUrl />
        <springframework.version>5.3.21</springframework.version>
        <springframework.security.version>5.7.2</springframework.security.version>
		<junit.jupiter.version>5.9.0</junit.jupiter.version>
		<maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
	</properties>

	<modules>
		<module>ols-geocoder-core</module>
		<module>ols-geocoder-web</module>
		<module>ols-geocoder-admin</module>
		<module>ols-geocoder-process</module>
	</modules>

	<build>
		<plugins>
			<plugin>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>${maven-surefire-plugin.version}</version>
			<configuration>
				<groups>Prod</groups>
				<excludedGroups>Dev</excludedGroups>
			</configuration>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-war-plugin</artifactId>
			    <version>3.3.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<configuration>
					<includePom>true</includePom>
				</configuration>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>javadoc-html</id>
						<phase>install</phase>
						<configuration>
							<quiet>true</quiet>
							<show>public</show>
						</configuration>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<header>src/license/APACHE-2.txt</header>
					<properties>
						<owner>Province of British Columbia</owner>
					<year>2019</year>
					</properties>
					<includes>
		                <include>**/*.java</include>
					</includes>
					<keywords>
						<keyword>copyright</keyword>
						<keyword>license</keyword>
					</keywords>
				</configuration>
				<!-- executions>
					<execution>
						<inherited>false</inherited>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions -->
			</plugin>
			<!-- plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<id>aggregate-add-third-party</id>
						<inherited>true</inherited>
						<configuration>
							<force>true</force>
							<outputDirectory>src/license/</outputDirectory>
							<useMissingFile>true</useMissingFile>
							<licenseMerges>
								<licenseMerge>apache_2_0|apache_v2</licenseMerge>
								<licenseMerge>apache_2_0|The Apache Software License, Version 2.0</licenseMerge>
								<licenseMerge>apache_2_0|Apache License, Version 2.0</licenseMerge>
								<licenseMerge>apache_2_0|Apache License 2.0</licenseMerge>
								<licenseMerge>apache_2_0|Apache License</licenseMerge>
								<licenseMerge>apache_2_0|Apache 2.0 License</licenseMerge>
								<licenseMerge>apache_2_0|Apache 2</licenseMerge>
								<licenseMerge>apache_2_0|ASF 2.0</licenseMerge>
								<licenseMerge>bsd_2|The BSD License</licenseMerge>
								<licenseMerge>bsd_2|BSD License</licenseMerge>
								<licenseMerge>cddl_1_0|Common Development and Distribution License (CDDL) v1.0</licenseMerge>
								<licenseMerge>cddl_1_0|COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0</licenseMerge>
								<licenseMerge>epl_1|Eclipse Public License - v 1.0</licenseMerge>
								<licenseMerge>lgpl_2_1|LGPL 2.1</licenseMerge>
								<licenseMerge>lgpl_2_1|GNU Lesser General Public License</licenseMerge>
								<licenseMerge>lgpl_2_1|Lesser General Public License (LGPL)</licenseMerge>
								<licenseMerge>mit|MIT License</licenseMerge>
								<licenseMerge>mpl_1_1|MPL 1.1</licenseMerge>
							</licenseMerges>
						</configuration>
						<goals>
							<goal>aggregate-add-third-party</goal>
						</goals>
					</execution>
				</executions>
			</plugin -->
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											license-maven-plugin
										</artifactId>
										<versionRange>
											[1.8,)
										</versionRange>
										<goals>
											<goal>
												aggregate-add-third-party
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>osgeo</id>
			<name>Open Source Geospatial Foundation Repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
			<snapshots><enabled>false</enabled></snapshots>
			 <releases><enabled>true</enabled></releases>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit.jupiter.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.apache.logging.log4j</groupId>
						<artifactId>log4j-to-slf4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>jul-to-slf4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>ch.qos.logback</groupId>
						<artifactId>logback-classic</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.jupiter.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<distributionManagement>
		<repository>
			<id>central</id>
			<name>artifactory-ha-primary-0-releases</name>
			<url>https://artifacts.developer.gov.bc.ca/artifactory/g988-release</url>
		</repository>
			<snapshotRepository>
			<id>snapshots</id>
			<name>artifactory-ha-primary-0-snapshots</name>
			<url>https://artifacts.developer.gov.bc.ca/artifactory/g988-snapshot</url>
		</snapshotRepository>
	</distributionManagement>
</project>
